--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -26,9 +26,9 @@ jobs:
         id: snake-gif
         with:
           github_user_name: mushlih-almubarak
-          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          outputs: |
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark
 
       # Push the changes
       - name: Push changes
