--- a/.github/workflows/snake-animation.yml
+++ b/.github/workflows/snake-animation.yml
@@ -5,7 +5,7 @@ name: Generate Snake Animation
 on:
   schedule:
     # every 3 hours
-    - cron: "0 */3 * * *"
+    - cron: "1 * * * *"
 
 # The sequence of runs in this workflow:
 jobs:
