--- a/.github/workflows/snake-animation.yml
+++ b/.github/workflows/snake-animation.yml
@@ -7,6 +7,8 @@ on:
     # every 3 hours
     - cron: "1 * * * *"
 
+  workflow_dispatch:
+
 # The sequence of runs in this workflow:
 jobs:
   # This workflow contains a single job called "build"
