--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -26,7 +26,7 @@ jobs:
         id: snake-gif
         with:
           github_user_name: mushlih-almubarak
-          outputs: |
+          svg_out_path: |
             dist/github-snake.svg?color_snake=blue
             dist/github-snake-dark.svg?palette=github-dark&color_snake=blue
 
