--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,12 +1,15 @@
+# GitHub Action for generating a contribution graph with a snake eating your contributions.
+
 name: Generate Snake Animation
 
-# Controls when the action will run. This action runs every 3 hours
+# Controls when the action will run. This action runs every 12 hours.
 
 on:
   schedule:
-    # every 3 hours
-    - cron: "1 * * * *"
+      # every 12 hours
+    - cron: "0 */12 * * *"
 
+# This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
 
 # The sequence of runs in this workflow:
@@ -18,17 +21,18 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks repo under $GITHUB_WORKSHOP, so your job can access it
+
+    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
       - uses: actions/checkout@v2
 
-      # Generates the snake
+    # Generates the snake  
       - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: mushlih-almubarak
           svg_out_path: |
-            assets/github-snake.svg?color_snake=blue
-            assets/github-snake-dark.svg?palette=github-dark&color_snake=blue
+            dist/github-snake.svg?color_snake=blue
+            dist/github-snake-dark.svg?palette=github-dark&color_snake=blue
 
       # Push the changes
       - name: Push changes
@@ -36,3 +40,12 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: main
+          force: true
+
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          # the output branch we mentioned above
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
