--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           github_user_name: mushlih-almubarak
           svg_out_path: |
-            dist/github-snake.svg?color_snake=blue
+            dist/github-snake.svg?color_snake=blue,
             dist/github-snake-dark.svg?palette=github-dark&color_snake=blue
 
       # Push the changes
