--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -30,9 +30,7 @@ jobs:
         id: snake-gif
         with:
           github_user_name: mushlih-almubarak
-          svg_out_path: |
-            dist/github-snake.svg?color_snake=blue,
-            dist/github-snake-dark.svg?palette=github-dark&color_snake=blue
+          svg_out_path: dist/githubd-snake-dark.svg?palette=github-dark&color_snake=blue
 
       # Push the changes
       - name: Push changes
