--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -30,7 +30,7 @@ jobs:
         id: snake-gif
         with:
           github_user_name: mushlih-almubarak
-          gif_out_path: dist/github-contribution-grid-snake.gif?palette=github-dark&color_snake=blue
+          svg_out_path: dist/github-contribution-grid-snake.svg
 
       # Push the changes
       - name: Push changes
